<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/asset"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <!--Put form controls here-->
        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:background="#005b9f"
            android:gravity="bottom"
            android:text="Registro de Usuario"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="fill_parent"
            android:layout_height="73dp"
            android:hint="@string/main_EditTextName_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/EditTextApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/main_editTextApellido"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/EditTextclave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/main_txtClave_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_EditTextEmail_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5eb8ff"
            android:text="Rango de edad"
            android:textAlignment="center"
            android:textColor="#01579B"
            android:textColorHint="#005b9f"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/SpinnerFeedbackType"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:entries="@array/feedbacktypelist"
            android:prompt="@string/feedbacktype" />

        <EditText
            android:id="@+id/EditTextFeedbackBody"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:hint="Tu opinión nos Importa. Dejanos un comentario!"
            android:inputType="textMultiLine"
            android:lines="5" />

        <CheckBox
            android:id="@+id/CheckBoxResponse"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Recibir información por correo." />

        <Button
            android:id="@+id/btnvolverusuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btnvolver_hint" />

        <Button
            android:id="@+id/btnguradarusuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0288d1"
            android:onClick="sendFeedback"
            android:text="GUARDAR"
            android:textColor="#000000"
            android:textColorLink="#0288d1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="191dp"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>